Attempt to fix errors that show up in the console. We were unable fix the errors, but they don't negatively affect the page. Also add the bee image on small screen sizes.

--- a/client/src/app/home/home.component.css
+++ b/client/src/app/home/home.component.css
@@ -1,3 +1,4 @@
+
 #welcome {
     font-size: 200%;
     text-align: center;
@@ -8,18 +9,15 @@
     text-align: center;
     font-size: 18px;
     padding-right: 5%;
-    min-height: 160px;
+    min-height: 180px;
+
+    background-image: url("../../assets/background_bee.png");
+    background-size: 100%;
+
 }
 
-/*#nug-card {*/
-    /*min-height: 100px;*/
-    /*background: transparent;*/
-/*}*/
-
 #source{
-    /*background-image: url("../../assets/footer-bee.png");*/
-    /*background-size: 100%;*/
-    /*min-height: 90px;*/
+    min-height: 50px;
     text-align: center;
     font-size: 15px;
     padding-top: 10px;
@@ -34,4 +32,11 @@
     color: white;
     text-align: center;
     padding: 10px;
+}
+
+@media screen and (min-width: 700px) {
+    #nugget{
+        background-image: none;
+        min-height: 0px;
+    }
 }
